# jarvis-home-ai

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: ci.yml
apps/display-node/: pyproject.toml
apps/display-node/pilot_display_node/: __init__.py  server.py
apps/display-node/pilot_display_node/static/: app.js  index.html  styles.css
apps/display-node/tests/: test_server.py
apps/pilot-android/: README.md  settings.gradle.kts
apps/pilot-android/app/: build.gradle.kts
apps/pilot-core/: pyproject.toml
apps/pilot-core/pilot_core/: __init__.py  api.py  assist_focus.py  audio_assets.py  config.py  conversation.py  dashboard.py  firmware.py  focus.py  home_actions.py  home_intelligence.py  integrations.py  main.py  media_state.py  meetings.py  observability.py  orchestration.py  registry.py  secret_values.py  storage.py  tts.py  voice.py  voice_acceptance.py
apps/pilot-core/pilot_core/dashboard/: app.css  app.js  index.html
apps/pilot-core/tests/: test_api.py  test_assist_focus.py  test_config.py  test_conversation.py  test_dashboard.py  test_device_api.py  test_firmware.py  test_focus.py  test_home_actions.py  test_home_intelligence.py  test_integrations.py  test_media_state.py  test_meeting_processor.py  test_observability.py  test_orchestration.py  test_product_contract.py  test_registry.py  test_secret_values.py  test_storage.py  test_tts.py  test_voice.py  test_voice_acceptance.py
apps/pilot-core/tests/fixtures/: assistant_response.v1.json  client_events.v1.json  device_manifest.v1.json  home_entity_presentation.v1.json  media_snapshot.v1.json
apps/pilot-ios/: README.md  project.yml
apps/pilot-ios/Pilot/: Info.plist  KeychainStore.swift  Models.swift  PhonePlaybackController.swift  PilotAPI.swift  PilotApp.swift  PilotModel.swift  RootView.swift
apps/pilot-ios/Pilot.xcodeproj/: project.pbxproj
apps/pilot-ios/PilotTests/: PilotTests.swift
apps/pilot-ios/scripts/: generate_app_icon.swift
apps/room-agent/: pyproject.toml
apps/room-agent/pilot_room_agent/: __init__.py  activation.py  activation_cli.py  audio_defaults.py  audio_delivery.py  audio_focus.py  command_client.py  config.py  controls.py  main.py  reporter.py  status.py  video_playback.py
apps/room-agent/tests/: test_activation.py  test_activation_cli.py  test_audio_defaults.py  test_audio_delivery.py  test_audio_focus.py  test_command_client.py  test_config.py  test_controls.py  test_main.py  test_reporter.py  test_status.py  test_video_playback.py
apps/shield-tv/: settings.gradle.kts
apps/shield-tv/app/: build.gradle.kts  proguard-rules.pro
assets/energy/: README.md
config/: core.container.toml  core.example.toml  room.example.toml
config/home-assistant/: pilot-contextual.pipeline.json
deploy/ansible/: ansible.cfg  display-node.yml  site.yml
deploy/ansible/inventory/: hosts.example.yml
deploy/scripts/: pilot-activate  pilot-audio  pilot-bootstrap-device  pilot-command  pilot-core-backup  pilot-core-deploy  pilot-core-diagnose  pilot-core-restore  pilot-core-sync  pilot-display-rollback  pilot-firmware-publish  pilot-hardware-inventory  pilot-media  pilot-media-room-acceptance  pilot-register-device  pilot-rollback  pilot-secrets  pilot-speak  pilot-validate  pilot-voice-acceptance
docs/: AIRPLAY.md  ARCHITECTURE.md  AUDIO_DELIVERY.md  AUDIO_FOCUS.md  COMMAND_TRANSPORT.md  CONTEXTUAL_ASSISTANT.md  DEPLOYMENT-2026-07-15.md  DEPLOYMENT-2026-07-16-NATIVE.md  DEPLOYMENT.md  HOME_ASSISTANT_CONVERSATION_BRIDGE.md  HOME_CONTROL.md  HOME_DIGITAL_TWIN.md  HOME_ENTITY_EXPOSURE.md  HOME_INTELLIGENCE.md  LOCAL_TTS.md  MEDIA_ROOM.md  MEETING_INTELLIGENCE.md  MUSIC_ASSISTANT.md  N150_MEDIA_CONSOLE.md  OBSERVABILITY.md  PILOT_ANDROID.md  PILOT_CORE.md  PILOT_IOS.md  PILOT_OS_BLUEPRINT.md  PRODUCTION_OPERATIONS.md  RASPBERRY_PI_DISPLAY_NODE.md  ROLLBACK.md  ROOM_ORCHESTRATION.md  SHIELD_TV.md  SUPERVISED_ACTIVATION.md  VALIDATION.md  VOICE_SATELLITE.md
docs/adr/: ADR-001-EXECUTION-MODES.md  ADR-002-LAYERED-MEMORY.md  ADR-003-SKILL-RUNTIME.md  ADR-004-INFERENCE-GATEWAY.md  ADR-005-intelligence-services-and-world-state.md  README.md
docs/architecture/: EVENT_BUS.md  IDENTITY_AND_LEARNING.md  KNOWLEDGE_AND_SEARCH.md  PILOT_INTELLIGENCE_FRAMEWORK.md  PLANNING_ENGINE.md  WORLD_MODEL.md
docs/research/: JARVIS_FEATURE_REVIEW.md
docs/schemas/: skill-manifest.example.yaml
firmware/pilot-display-node/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig.defaults
firmware/pilot-display-node/components/app_bsp/: CMakeLists.txt  lvgl_bsp.cpp  user_config.h
firmware/pilot-display-node/components/audio_bsp/: CMakeLists.txt  pilot_audio.cpp  pilot_audio.h
firmware/pilot-display-node/components/motion_bsp/: CMakeLists.txt  motion_bsp.cpp  motion_bsp.h
firmware/pilot-display-node/components/pilot_client/: CMakeLists.txt  pilot_client.cpp  pilot_client.h
firmware/pilot-display-node/components/pmicpower/: CMakeLists.txt  power_bsp.h
firmware/pilot-display-node/components/port_bsp/: CMakeLists.txt  display_bsp.cpp
firmware/pilot-display-node/main/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/pilot-display-node/scripts/: build.sh  flash.sh  package-release.sh
infra/: .env.example  docker-compose.yml
infra/pilot-core/: Dockerfile  volume_archive.py
infra/pilot-core/tests/: test_volume_archive.py
systemd/: pilot-airplay.service.j2  pilot-audio-defaults.service.j2  pilot-linux-voice-assistant.service.j2  pilot-room-agent.service.j2  pilot-sendspin.service.j2  pilot-squeezelite.service.j2
(+80 files in other folders)
