[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-core"
version = "0.29.1"
description = "Central room and player registry for Pilot OS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "segno==1.6.6",
  "uvicorn>=0.35,<1",
  "websockets>=15,<17",
]

[project.scripts]
pilot-core = "pilot_core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pilot_core*"]

[tool.setuptools.package-data]
pilot_core = ["dashboard/*.html", "dashboard/*.css", "dashboard/*.js", "dashboard/*.png"]
