[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-room-agent"
version = "0.3.0"
description = "Local health and device-status agent for a Pilot room endpoint"
requires-python = ">=3.11"
dependencies = [
  "websockets>=15,<17",
]

[project.scripts]
pilot-room-agent = "pilot_room_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pilot_room_agent*"]
