[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pilot-room-agent"
version = "0.6.0"
description = "Local audio, voice, video, health and control agent for a Pilot room endpoint"
requires-python = ">=3.11"
dependencies = [
  "websockets>=15,<17",
]

[project.scripts]
pilot-room-agent = "pilot_room_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pilot_room_agent*"]
